--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "color": "^3.1.2",
+    "colors": "^1.3.3",
     "express": "^4.17.1",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
