--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "color": "^3.1.2",
     "colors": "^1.3.3",
     "express": "^4.17.1",
