--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "color": "^3.1.2",
     "colors": "^1.3.3",
+    "eslint-utils": "^1.4.2",
     "express": "^4.17.1",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
